added files for basic books listing redux app

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq06l5RUVfib62IYRQacLc-KAy0XIWAVs"></script>
   </head>
   <body>
-    <div id="root" class="container"></div>
+    <div class="container"></div>
   </body>
-  <!--Bundle.js is created by webpack and babel-->
   <script src="/bundle.js"></script>
 </html>
